--- a/style.css
+++ b/style.css
@@ -42,7 +42,9 @@ body * {
 }
 
 #container {
-  width: 22.5rem;
+  width: 100%;
+  max-width: 36rem;
+  min-width: 17rem;
   margin: auto;
   margin-top: 3.5rem;
   padding: 0 1.5rem;
