--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ body {
 
   /* background: color image repeat position /size */
   /* background: url(./assets/bg-mobile.jpg) no-repeat top center/cover; */
+
+  height: 100vh;
 }
 
 body * {
@@ -170,4 +172,14 @@ footer {
   text-align: center;
 
   font-size: 0.875rem;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
